# small-square

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  LICENSE.txt  README.md  doxygen.conf  shell.nix  smallsquare.cbp
core/: CMakeLists.txt
core/include/: CMakeLists.txt
core/include/glad/: glad.c  glad.h
core/include/stb_image/: stb_image.h
core/source/: CMakeLists.txt  camera.cpp  camera.h  camera_controller.cpp  camera_controller.h  data_tree.h  debug.cpp  debug.h  game.cpp  game.h  gameobject.cpp  gameobject.h  input.cpp  input.h  light.cpp  light.h  model.cpp  model.h  raycast.cpp  raycast.h  shader.cpp  shader.h  texture.cpp  texture.h
docs/: 3d-models-import  README.md.in
docs/doxygen/: doxygen.in
docs/source/: conf.py  index.rst
docs/sphinx/: conf.py  index.rst
docs/sphinx/building/: index.rst
docs/sphinx/get-started/: index.rst
docs/sphinx/modules/: index.rst
docs/sphinx/modules/ui/: index.rst
include/: CMakeLists.txt
include/stb_image/: stb_image.h
modules/UI/: CMakeLists.txt
modules/UI/source/: canvas.cpp  canvas.h  ui_quad.cpp  ui_quad.h
modules/physics/: CMakeLists.txt
modules/physics/source/: collider_object.cpp  collider_object.h  collision_object.cpp  collision_object.h  physics_object.cpp  physics_object.h
samples/: CMakeLists.txt  config.h  config.h.in  main.cpp
samples/models/Axes/: Axis.blend  all-axes.mtl  x-axis.mtl  y-axis.mtl  z-axis.mtl
samples/models/Backpack/: source_attribution.txt
samples/models/UVCube/: cube.mtl
samples/shaders/: basic_phong.frag  basic_phong.vert  basic_ui.frag  basic_ui.vert  debug.frag  debug.vert  solid.frag  solid.vert
source/UI/: CMakeLists.txt  canvas.h  ui_element.cpp  ui_element.h  ui_quad.cpp  ui_quad.h
source/core/: CMakeLists.txt  camera.cpp  camera.h  camera_controller.cpp  camera_controller.h  data_tree.h  debug.cpp  debug.h  game.cpp  game.h  gameobject.cpp  gameobject.h  input.cpp  input.h  light.cpp  light.h  model.cpp  model.h  raycast.cpp  raycast.h  shader.cpp  shader.h  texture.cpp  texture.h
source/physics/: CMakeLists.txt  collider_object.cpp  collider_object.h  collision_object.cpp  collision_object.h  physics_object.cpp  physics_object.h
tests/: CMakeLists.txt  t_game.cpp  t_gameobject.cpp
unit-tests/: CMakeLists.txt
